@@ -7,8 +7,10 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.HttpHeaders;
+import org.springframework.http.MediaType;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
+import uk.gov.hmcts.et.common.model.bulk.types.DynamicFixedListType;
 import uk.gov.hmcts.et.common.model.ccd.CCDRequest;
 import uk.gov.hmcts.et.common.model.ccd.CaseData;
 import uk.gov.hmcts.et.common.model.ccd.items.JurCodesTypeItem;
@@ -20,7 +22,7 @@ import uk.gov.hmcts.ethos.replacement.docmosis.utils.CCDRequestBuilder;
 import uk.gov.hmcts.ethos.replacement.docmosis.utils.JsonMapper;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.notNullValue;
@@ -42,6 +44,8 @@ class Et1VettingControllerTest {
 
     private static final String INIT_CASE_VETTING_ENDPOINT = "/initialiseEt1Vetting";
     private static final String JURISDICTION_CODE_ENDPOINT = "/jurisdictionCodes";
+    private static final String HEARING_VENUE_ENDPOINT = "/et1HearingVenue";
+    private static final String ET1_PROCESSING_COMPLETE_URL = "/finishEt1Vetting";
     private static final String AUTH_TOKEN = "some-token";
     private CCDRequest ccdRequest;
 
@@ -57,6 +61,7 @@ class Et1VettingControllerTest {
     @BeforeEach
     void setUp() {
         var caseData = new CaseData();
+        caseData.setManagingOffice("Manchester");
         addJurCodeToExistingCollection(caseData, JurisdictionCode.DOD.name());
         ccdRequest = CCDRequestBuilder.builder().withCaseData(caseData).build();
     }
@@ -104,7 +109,7 @@ class Et1VettingControllerTest {
     @Test
     void jurisdictionCodes_Success() throws Exception {
         when(verifyTokenService.verifyTokenSignature(AUTH_TOKEN)).thenReturn(true);
-        when(et1VettingService.validateJurisdictionCodes(any())).thenReturn(Arrays.asList());
+        when(et1VettingService.validateJurisdictionCodes(any())).thenReturn(List.of());
         when(et1VettingService.populateEt1TrackAllocationHtml(any())).thenReturn("jurCodeHtml");
         mockMvc.perform(post(JURISDICTION_CODE_ENDPOINT)
                 .contentType(APPLICATION_JSON)
@@ -131,6 +136,34 @@ class Et1VettingControllerTest {
         verify(et1VettingService, never()).initialiseEt1Vetting(ccdRequest.getCaseDetails());
     }
 
+    @Test
+    void hearingVenues_Success() throws Exception {
+        when(verifyTokenService.verifyTokenSignature(AUTH_TOKEN)).thenReturn(true);
+        when(et1VettingService.getAddressesHtml(any())).thenReturn("addressesHtml");
+        when(et1VettingService.getHearingVenuesList(any())).thenReturn(new DynamicFixedListType());
+        mockMvc.perform(post(HEARING_VENUE_ENDPOINT)
+                .contentType(APPLICATION_JSON)
+                .header(HttpHeaders.AUTHORIZATION, AUTH_TOKEN)
+                .content(jsonMapper.toJson(ccdRequest)))
+            .andExpect(status().isOk())
+            .andExpect(jsonPath("$.data.et1AddressDetails", notNullValue()))
+            .andExpect(jsonPath("$.data.et1TribunalRegion", notNullValue()))
+            .andExpect(jsonPath("$.data.et1HearingVenues", notNullValue()))
+            .andExpect(jsonPath("$.errors", nullValue()))
+            .andExpect(jsonPath("$.warnings", nullValue()));
+    }
+
+    @Test
+    void hearingVenues_invalidToken() throws Exception {
+        when(verifyTokenService.verifyTokenSignature(AUTH_TOKEN)).thenReturn(false);
+        mockMvc.perform(post(HEARING_VENUE_ENDPOINT)
+                .contentType(APPLICATION_JSON)
+                .header(HttpHeaders.AUTHORIZATION, AUTH_TOKEN)
+                .content(jsonMapper.toJson(ccdRequest)))
+            .andExpect(status().isForbidden());
+        verify(et1VettingService, never()).initialiseEt1Vetting(ccdRequest.getCaseDetails());
+    }
+
     private void addJurCodeToExistingCollection(CaseData caseData, String code) {
         JurCodesType newCode = new JurCodesType();
         newCode.setJuridictionCodesList(code);
@@ -140,4 +173,35 @@ class Et1VettingControllerTest {
         caseData.getJurCodesCollection().add(codesTypeItem);
     }
 
+    @Test
+    void et1ProcessingComplete_tokenOk() throws Exception {
+        when(verifyTokenService.verifyTokenSignature(AUTH_TOKEN)).thenReturn(true);
+        mockMvc.perform(post(ET1_PROCESSING_COMPLETE_URL)
+                .content(jsonMapper.toJson(ccdRequest))
+                .header("Authorization", AUTH_TOKEN)
+                .contentType(MediaType.APPLICATION_JSON))
+            .andExpect(status().isOk())
+            .andExpect(jsonPath("$.data", notNullValue()))
+            .andExpect(jsonPath("$.errors", nullValue()))
+            .andExpect(jsonPath("$.warnings", nullValue()));
+    }
+
+    @Test
+    void et1ProcessingComplete_tokenFail() throws Exception {
+        when(verifyTokenService.verifyTokenSignature(AUTH_TOKEN)).thenReturn(false);
+        mockMvc.perform(post(ET1_PROCESSING_COMPLETE_URL)
+                .content(jsonMapper.toJson(ccdRequest))
+                .header("Authorization", AUTH_TOKEN)
+                .contentType(MediaType.APPLICATION_JSON))
+            .andExpect(status().isForbidden());
+    }
+
+    @Test
+    void et1ProcessingComplete_badRequest() throws Exception {
+        mockMvc.perform(post(ET1_PROCESSING_COMPLETE_URL)
+                .content("garbage content")
+                .header("Authorization", AUTH_TOKEN)
+                .contentType(MediaType.APPLICATION_JSON))
+            .andExpect(status().isBadRequest());
+    }
 }
